<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia_text">NMedia!</string>
    <string name="no">no</string>
    <string name="edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_title">Edit Post</string>
    <string name="edit_image">Edit image</string>
    <string name="close_edited">Close edited</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">save</string>
    <string name="title_edit">Editing</string>
    <string name="title_new_post">New post</string>
    <string name="video_image">video image</string>
    <string name="enter_link">enter link</string>
    <string name="video_link">Video link</string>
    <string name="post_body">post body.......</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s published new post:</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_need_update_app">You need to update app</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="error_auth">Error in Auth</string>
    <string name="error">Ошибка %1$s. Попробуйте выполнить операцию позднее</string>
    <string name="error_password_confirm">password not confirmed</string>
    <string name="error_empty_field">empty field</string>
    <string name="fresh_posts">свежие записи</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_need_sign_in">Sign in to ..?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">yes</string>
</resources>